--- a/demo-3/src/main/resources/templates/user_form.html
+++ b/demo-3/src/main/resources/templates/user_form.html
@@ -13,17 +13,21 @@
     </div>
     <form th:action="@{/user/signup}" th:object="${userCreateForm}" method="post">
 
-        <div class="mb-3">
+        <div>
             <label for="username">사용자ID</label>
-            <input type="text" th:field="*{username}" >
+            <input type="text" th:field="*{username}">
         </div>
         <div class="mb-3">
-            <label for="password1" >비밀번호</label>
+            <label for="password1">비밀번호</label>
             <input type="password" th:field="*{password1}">
         </div>
         <div class="mb-3">
             <label for="password2">비밀번호 확인</label>
             <input type="password" th:field="*{password2}">
+        </div>
+        <div class="mb-3">
+            <label for="email">이메일</label>
+            <input type="email" th:field="*{email}">
         </div>
         <button type="submit">회원가입</button>
     </form>
